--- a/CarAccessories/CarPartsShop/templates/shop/shop_index.html
+++ b/CarAccessories/CarPartsShop/templates/shop/shop_index.html
@@ -59,7 +59,7 @@
         </div>
         <div class="block-top-categori">
             <div class="container">
-                <div class="title-of-section"><span>Top Categories</span></div>
+                <div class="title-of-section"><span>热门分类</span></div>
                 <div class="owl-carousel nav-style2" data-nav="true" data-autoplay="false" data-dots="false"
                      data-loop="true" data-margin="30"
                      data-responsive='{"0":{"items":1},"480":{"items":2},"768":{"items":3},"992":{"items":4}}'>
@@ -114,7 +114,7 @@
         </div>
         <div class="block-feature-product">
             <div class="container">
-                <div class="title-of-section"><span>Featured Products</span></div>
+                <div class="title-of-section"><span>特色产品</span></div>
                 <div class="tab-product tab-product-fade-effect">
                     <ul class="box-tabs nav-tab">
                         <li class="active"><a data-animated="" data-toggle="tab" href="#tab-1">All Products </a></li>
@@ -1055,186 +1055,10 @@
                 </div>
             </div>
         </div>
-        <div class="block-sale-product full-width block-background">
-            <div class="container">
-                <div class="title-of-section"><span>Sale Products</span></div>
-                <div class="owl-carousel nav-style2 border-background equal-container" data-nav="true"
-                     data-autoplay="false" data-dots="false" data-loop="true" data-margin="30"
-                     data-responsive='{"0":{"items":1},"480":{"items":2},"768":{"items":3},"1200":{"items":3}}'>
-                    <div class="product-item style1">
-                        <div class="product-inner equal-elem">
-                            <div class="product-thumb">
-                                <div class="thumb-inner">
-                                    <a href="#"><img src="/static/assets/images/home1/s1.jpg" alt="s1"></a>
-                                </div>
-                                <span class="onsale">-50%</span>
-                                <a href="#" class="quick-view">Quick View</a>
-                            </div>
-                            <div class="product-innfo">
-                                <div class="product-name"><a href="#">Wheel With Inserts</a></div>
-                                <span class="price">
 
-                                        <ins>$229.00</ins>
-
-                                        <del>$259.00</del>
-
-                                    </span>
-                                <span class="star-rating">
-
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-
-                                        <span class="review">5 Review(s)</span>
-
-                                    </span>
-                                <div class="group-btn-hover style2">
-                                    <a href="#" class="add-to-cart"><i class="fa fa-shopping-bag"
-                                                                       aria-hidden="true"></i></a>
-                                    <a href="#" class="compare"><i class="flaticon-refresh-square-arrows"></i></a>
-                                    <a href="#" class="wishlist"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product-item style1">
-                        <div class="product-inner equal-elem">
-                            <div class="product-thumb">
-                                <div class="thumb-inner">
-                                    <a href="#"><img src="/static/assets/images/home1/s2.jpg" alt="s2"></a>
-                                </div>
-                                <span class="onsale">-50%</span>
-                                <a href="#" class="quick-view">Quick View</a>
-                            </div>
-                            <div class="product-innfo">
-                                <div class="product-name"><a href="#">A-Pillar Gauge Kit</a></div>
-                                <span class="price">
-
-                                        <ins>$229.00</ins>
-
-                                        <del>$259.00</del>
-
-                                    </span>
-                                <span class="star-rating">
-
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-
-                                        <span class="review">5 Review(s)</span>
-
-                                    </span>
-                                <div class="group-btn-hover style2">
-                                    <a href="#" class="add-to-cart"><i class="fa fa-shopping-bag"
-                                                                       aria-hidden="true"></i></a>
-                                    <a href="#" class="compare"><i class="flaticon-refresh-square-arrows"></i></a>
-                                    <a href="#" class="wishlist"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product-item style1">
-                        <div class="product-inner equal-elem">
-                            <div class="product-thumb">
-                                <div class="thumb-inner">
-                                    <a href="#"><img src="/static/assets/images/home1/s3.jpg" alt="s3"></a>
-                                </div>
-                                <span class="onsale">-50%</span>
-                                <a href="#" class="quick-view">Quick View</a>
-                            </div>
-                            <div class="product-innfo">
-                                <div class="product-name"><a href="#">Elite-X Sport Seats</a></div>
-                                <span class="price">
-
-                                        <ins>$229.00</ins>
-
-                                        <del>$259.00</del>
-
-                                    </span>
-                                <span class="star-rating">
-
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-
-                                        <span class="review">5 Review(s)</span>
-
-                                    </span>
-                                <div class="group-btn-hover style2">
-                                    <a href="#" class="add-to-cart"><i class="fa fa-shopping-bag"
-                                                                       aria-hidden="true"></i></a>
-                                    <a href="#" class="compare"><i class="flaticon-refresh-square-arrows"></i></a>
-                                    <a href="#" class="wishlist"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product-item style1">
-                        <div class="product-inner equal-elem">
-                            <div class="product-thumb">
-                                <div class="thumb-inner">
-                                    <a href="#"><img src="/static/assets/images/home1/s4.jpg" alt="s4"></a>
-                                </div>
-                                <span class="onsale">-50%</span>
-                                <a href="#" class="quick-view">Quick View</a>
-                            </div>
-                            <div class="product-innfo">
-                                <div class="product-name"><a href="#">Elite-X Sport Seats</a></div>
-                                <span class="price">
-
-                                        <ins>$229.00</ins>
-
-                                        <del>$259.00</del>
-
-                                    </span>
-                                <span class="star-rating">
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <span class="review">5 Review(s)</span>
-
-                                                        </span>
-                                <div class="group-btn-hover style2">
-                                    <a href="#" class="add-to-cart"><i class="fa fa-shopping-bag"
-                                                                       aria-hidden="true"></i></a>
-                                    <a href="#" class="compare"><i class="flaticon-refresh-square-arrows"></i></a>
-                                    <a href="#" class="wishlist"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="block-recent-view">
             <div class="container">
-                <div class="title-of-section"><span>Recently Viewed Products</span></div>
+                <div class="title-of-section"><span>最近浏览</span></div>
                 <div class="owl-carousel nav-style2 border-background equal-container" data-nav="true"
                      data-autoplay="false" data-dots="false" data-loop="true" data-margin="30"
                      data-responsive='{"0":{"items":1},"480":{"items":2},"768":{"items":3},"992":{"items":4},"1000":{"items":4}}'>
@@ -1488,7 +1312,7 @@
         </div>
         <div class="block-the-blog">
             <div class="container">
-                <div class="title-of-section"><span>From The Blog</span></div>
+                <div class="title-of-section"><span>新闻</span></div>
                 <div class="owl-carousel nav-style2" data-nav="true" data-autoplay="false" data-dots="true"
                      data-loop="true" data-margin="30"
                      data-responsive='{"0":{"items":1},"480":{"items":2},"600":{"items":2},"992":{"items":3}}'>
