--- a/CarAccessories/CarNews/templates/news/blog_list.html
+++ b/CarAccessories/CarNews/templates/news/blog_list.html
@@ -11,14 +11,15 @@
         <div class="container">
             <ol class="breadcrumb-page">
                 <li><a href="#">首页</a></li>
-                <li class="active"><a href="#">汽配之家快讯</a></li>
+                <li ><a href="#">汽配之家快讯</a></li>
             </ol>
         </div>
         <div class="container">
             <div class="row">
                 <div class="col-md-9 col-sm-8 float-none float-right">
                     <div class="main-content">
-                        <div class="post-list post-items" id="postsnewsapi">
+                        <div class="post-list post-items posts" id="postsnewsapi">
+
                             <div class="post-item" v-for="site in sites">
                                 <div class="post-thumb ">
                                     <a href="#" class="postsaflag"><img v-bind:src="'https://'+site.news_list_img" class="postsimgflag" style="height: 200px; width: 400px" alt="post-image-3"></a>
@@ -33,7 +34,7 @@
                                     </div>
                                     <div class="post-content">
                                         <p v-text="site.news_abstract"></p>
-                                        <a href="javascript:void(0);" v-bind:id="site.id" class="read-more" onclick="godeail(this)">继续阅读</a>
+                                        <a href="javascript:void(0);" v-bind:id="site.id" target="_blank" class="read-more" onclick="godeail(this)">继续阅读</a>
                                     </div>
                                 </div>
                             </div>
@@ -41,11 +42,12 @@
 
                         </div>
                         <div class="pagination">
+                            <li class="firsttab" style="position: relative;left: 630px"><a href="javascript:void(0);" onclick="firstpage()">首页</a></li>
                             <ul class="nav-links">
-                                <li class="active"><a href="#">1</a></li>
-                                <li><a href="#">2</a></li>
-                                <li><a href="#">3</a></li>
-                                <li class="back-next"><a href="#">Next</a></li>
+                                <li class="active pagelist" ><a href="#" onclick="pagechange(this)">1</a></li>
+                                <li class="pagelist"><a href="#" onclick="pagechange(this)">2</a></li>
+                                <li class="pagelist"><a href="#" onclick="pagechange(this)">3</a></li>
+
                             </ul>
                         </div>
                     </div>
@@ -88,39 +90,86 @@
                 </div>
             </div>
         </div>
+
     </main><!-- end MAIN -->
 {% endblock %}
 {% block js %}
     <script>
 
-    new Vue({
-    el: '#postsnewsapi',
-    data: {
-        sites: []
-    }, 
+     var v1 = new Vue({
+        el: '#postsnewsapi',
+        data: {
+            sites: [{},{},{},{},{},{},{},{}]
+        },
     created:function () {
-        var self = this;
-        $.ajax(
-            {
-                url:'http://127.0.0.1:8000/news/newsapi/',
-                type:'GET',
-                data:{
-                    'format': 'json',
-                    'page': 1,
-                },
-                dataType:"json",
-                timeout:'2000',
+        {#var self = this;#}
+        this.postdata(this.sites);
+        },
+    methods: {
+            postdata(page=1) {
+                var sitetemp = [];
+                $.ajax(
+                    {
+                        url: 'http://10.10.14.182/news/newsapi/',
+                        type: 'GET',
+                        data: {
+                            'format': 'json',
+                            'page': page,
+                        },
+                        dataType: "json",
+                        timeout: '2000',
+                        async:false,
+                        success:function (res) {
+                            sitetemp =  res['newsdata'];
+                        },
+                        error:function (err) {
+                            console.log(err)
+                        }
+                    }
+                );
+                this.sites = sitetemp
             }
-        ).then(function (res) {
-            {#console.log(res)#}
-            self.sites = res['newsdata'];
-        }).fail(function () {
-                console.log('失败');
-            })
     }
+
     });
+
     function godeail(thiss) {
-        window.location.href='/news/news_single?id='+thiss.id.toString()
+        {#window.location.href='/news/news_single?id='+thiss.id#}
+        window.open("/news/news_single?id="+thiss.id)
+    }
+
+    function pagechange(self) {
+        $('.pagelist').removeAttr('class', 'active');
+        var page = parseInt(self.childNodes[0]['textContent']);
+        {#console.log($(self.parentNode).next().next().text())#}
+        if(self.parentNode.parentNode.firstElementChild.childNodes[0]['textContent']==page) {
+            if(page>1) {
+                $(self).text(parseInt(page) - 1)
+                {#$(self).next().text(5)#}
+                $(self).parent().next().children().text(page)
+                $(self).parent().next().attr('class','active pagelist');
+                $(self).parent().next().next().children().text(page + 1)
+                v1.postdata(page);
+            }else {
+                $(self).parent().attr('class','active pagelist');
+            }
+        }else {
+
+            var temp = parseInt(self.parentNode.parentNode.firstElementChild.childNodes[0]['textContent']);
+            if((page-temp)===1) {
+                $(self).parent().attr('class','active pagelist');
+            }else {
+                $(self).text(parseInt(page)+1)
+                $(self).parent().prev().children().text(page)
+                $(self).parent().prev().attr('class','active pagelist');
+                $(self).parent().prev().prev().children().text(page - 1)
+            }
+
+            v1.postdata(page);
+        }
+    }
+    function firstpage() {
+        window.location.href="/news/news_list/";
     }
 
     </script>
