--- a/CarAccessories/CarNews/templates/news/blog_single.html
+++ b/CarAccessories/CarNews/templates/news/blog_single.html
@@ -27,7 +27,7 @@
                                     <span class="date" > <span>来自</span><span v-text="site.news_time_str"></span></span>
                                 </div>
                                 <div class="post-item-info">
-                                    <h3 class="post-name"><a href="#">It’s all about the bread: whole grain home</a></h3>
+                                    <h3 class="post-name"><a href="#"><span v-text="site.news_title"></span></a></h3>
                                     <div class="post-metas">
                                          <span>时间: </span><span class="author"><span v-text="site.news_art_time"></span></span>
                                         <span >阅读</span><span class="comment" v-text="site.news_read_num"><i class="fa fa-comment" aria-hidden="true"></i></span>
@@ -126,7 +126,7 @@
         var self = this;
         $.ajax(
             {
-                url:'http://127.0.0.1:8000/news/newsapi/',
+                url:'http://10.10.14.182/news/newsapi/',
                 type:'GET',
                 data:{
                     'format': 'json',
@@ -137,7 +137,6 @@
             }
         ).then(function (res) {
             self.site = res['newsdata'];
-            console.log(self.site)
         }).fail(function () {
                 console.log('失败');
             })
