--- a/CarAccessories/CarPartsShop/templates/shop/shop_base.html
+++ b/CarAccessories/CarPartsShop/templates/shop/shop_base.html
@@ -271,7 +271,7 @@
 
                                 </li>
                                 <li class=" arrow">
-                                    <a href="#" >商品列表</a>
+                                    <a href="/shop/shop_list/" >商品列表</a>
                                     <span class="toggle-submenu hidden-md"></span>
 
                                 </li>
